<resources>
    <string name="app_name">Midterm</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="random">Random</string>
    <string name="what_day_is_your_test_mm_dd">What day is your test? MM/DD</string>
    <string name="add_to_calendar">Add to calendar</string>
    <string name="textviewtopic">TextViewTopic</string>
    <string name="_12_12">12/12</string>
    <string name="mm_dd">MM/DD</string>
    <string name="flip">Flip</string>
    <string name="what_is_the_topic_of_your_cards">What is the topic of your cards?</string>
    <string name="topic">Topic</string>

    <string name="word">Word</string>

    <string name="definition">Definition</string>
    <string name="add">Add</string>
    <string name="done">Done</string>
    <string name="textview">TextView</string>
</resources>